--- a/titanic/src/main/resources/application.properties
+++ b/titanic/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/recipieee?createDatabaseIfNotExist=true
-spring.datasource.username=root  // your database name
-spring.datasource.password=root  //your database password
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Properties
